<resources>
    <string name="app_name">Dev Journal</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <!-- Onboarding Strings -->
    <!-- Headers -->
    <string name="ob_header1">"Add tasks, reminders and ideas quickly "</string>
    <string name="ob_header2">"Find your recent work and dive back fast. "</string>
    <string name="ob_header3">"See all of your Tasks and complete them. "</string>
    <!-- Footers -->
    <string name="ob_footer1">"Add and edit your tasks for the day. "</string>
    <string name="ob_footer2">"You can easily search recent tasks and dive back in fast. "</string>
    <string name="ob_footer3">"Easy overview of all tasks, work in progress, done tasks and notes. "</string>

    <!-- Libraries -->
    <string name="about_libraries_card_title" translatable="false">Libraries</string>
    <string name="about_library1_title" translatable="false">Retrofit</string>
    <string name="about_library1_subtitle" translatable="false">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="about_library2_title" translatable="false">Glide</string>
    <string name="about_library2_subtitle" translatable="false">An image loading and caching library for Android focused on smooth scrolling</string>
    <string name="about_library3_title" translatable="false">AndroidX</string>
    <string name="about_library3_subtitle" translatable="false">AndroidX is the open-source project that the Android team uses to develop, test, package, version and release libraries within Jetpack.</string>
    <string name="about_library4_title" translatable="false">Firebase Auth</string>
    <string name="about_library4_subtitle" translatable="false">Email authentication using Firebase</string>
    <string name="about_library5_title" translatable="false">Room</string>
    <string name="about_library5_subtitle" translatable="false">The Room persistence library provides an abstraction layer over SQLite to allow for more robust database access while harnessing the full power of SQLite.</string>
    <string name="about_library6_title" translatable="false">Espresso</string>
    <string name="about_library6_subtitle" translatable="false">UI Testing framework made by Google for ensuring user experience</string>
    <string name="about_library10_title" translatable="false">Gson</string>
    <string name="about_library10_subtitle" translatable="false">A Java serialization/deserialization library to convert Java Objects into JSON and back</string>
    <string name="about_library11_title" translatable="false">Stetho</string>
    <string name="about_library11_subtitle" translatable="false">Stetho is a debug bridge for Android applications, enabling the powerful Chrome Developer Tools and much more.</string>
    <string name="about_library12_title" translatable="false">Material Design</string>
    <string name="about_library12_subtitle" translatable="false">A set of UI guidelines made available by Google</string>

    <!-- Settings -->
    <string name="settings" translatable="false">Settings</string>
    <string name="about" translatable="false">About</string>



    <!-- Preference Titles -->
    <string name="username_header" translatable="false">Account</string>
    <string name="reminders_header" translatable="false">Reminders</string>

    <!-- Account Preferences -->
    <string name="username_title" translatable="false">Your name</string>
    <string name="reminder_frequency_title" translatable="false">Remind me after:</string>

    <!-- Reminder Preferences -->
    <string name="reminder_title" translatable="false">Set reminders for tasks</string>
    <string-array name="reminder_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="reminder_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Theme Preferences -->
    <string name="theme_title" translatable="false">Change Appearance</string>
    <string name="dark_mode" translatable="false">Theme</string>

    <string-array name="theme_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Set by Battery Saver</item>
        <item>Use system default</item>
    </string-array>
    <string-array name="theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
    </string-array>

</resources>