<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/username_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/reminders_header">

        <SwitchPreferenceCompat
            app:key="reminder"
            app:title="@string/reminder_title" />

        <ListPreference
            app:defaultValue="Never"
            app:entries="@array/reminder_frequency_titles"
            app:entryValues="@array/reminder_frequency_values"
            app:key="reminder_frequency"
            app:title="@string/reminder_frequency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_title">

        <ListPreference
            app:defaultValue="Set by Battery Saver"
            app:entries="@array/theme_titles"
            app:entryValues="@array/theme_values"
            app:key="theme_switch"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
